--- a/index.html
+++ b/index.html
@@ -30,5 +30,64 @@
             <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
     </div>
+
+    <section class="tea_of_month">
+        <h2>Tea of the Month</h2>
+        <h4>What's Stepping at The Tea Cozy?</h4>
+        <div class="image_container">
+            <div class="imagen_segmento">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Berry Tea">
+                <p>Fall Berry Blitz Tea</p>
+            </div>
+            <div class="imagen_segmento">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced Rum">
+                <p>Spiced Rum Tea</p>
+            </div>
+            <div class="imagen_segmento">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg" alt="Seasonal Donuts">
+                <p>Seasonal Donuts</p>
+            </div>
+            <div class="imagen_segmento">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave">
+                <p>Myrtle Ave Tea</p>
+            </div>
+            <div class="imagen_segmento">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre">
+                <p>Bedford Bizarre Tea</p>
+            </div>
+        </div>
+    </section>
+
+    <div class="background">
+        <h2>Locations</h2>
+        <div class="container_hero">
+            <div class="hero">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div class="hero">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+            <div class="hero">
+                <h3>Downtown</h3>
+                <p>384 West 4th St</p>
+                <p>Suite 108</p>
+                <p>Portland, Maine</p>
+            </div>
+        </div>
+    </div>
+
+<h2>The Tea Cozy</h2>
+<h5>contact@theteacozy.com</h5>
+<h5>917-555-8904</h5>
+
+<footer>
+    <p>Copyright The Tea Cozy @ 2017</p>
+</footer>
 </body>
 </html>
